Fix NPE in Tag query methods: restore null-tolerant contains() lost when Guava ImmutableSet was replaced by JDK Set.copyOf